icons - fix vertical alignment for Lucide icons

--- a/static/css/icons.css
+++ b/static/css/icons.css
@@ -1,3 +1,8 @@
+/* Lucide icon vertical alignment fix */
+[class^="icon-"],
+[class*=" icon-"] {
+  vertical-align: -0.125em;
+}
 
 .icon,
 .icon:hover {
